# VEEN

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  README.md  clippy.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/veen-bridge/: Cargo.toml
crates/veen-bridge/src/: lib.rs  main.rs
crates/veen-cli/: Cargo.toml
crates/veen-cli/src/: cli.rs  kube.rs  kube_impl.rs  lib.rs  main.rs
crates/veen-cli/src/cli/: args.rs  cap.rs  hub.rs  hub_commands.rs  kube.rs  kube_commands.rs  output.rs  selftest.rs  selftest_commands.rs  tests.rs
crates/veen-cli/tests/: selftest_dispatch.rs
crates/veen-cli/tests/data/: op_paid_payload_hex.txt  op_schema_ids.json
crates/veen-core/: Cargo.toml
crates/veen-core/src/: hash.rs  hexutil.rs  identity.rs  length.rs  lib.rs  limits.rs  profile.rs  query.rs  schema.rs
crates/veen-core/src/capability/: mod.rs
crates/veen-core/src/federation/: mod.rs
crates/veen-core/src/hash/: mod.rs  tests.rs
crates/veen-core/src/hub/: mod.rs  tests.rs
crates/veen-core/src/identity/: context.rs  device.rs  external.rs  group.rs  handle.rs  mod.rs  org.rs  principal.rs  scoped_org.rs
crates/veen-core/src/kex/: mod.rs
crates/veen-core/src/label/: mod.rs  tests.rs
crates/veen-core/src/label_class/: mod.rs
crates/veen-core/src/meta/: mod.rs
crates/veen-core/src/operation/: mod.rs
crates/veen-core/src/pow/: mod.rs
crates/veen-core/src/profile/: error.rs  id.rs  mod.rs
crates/veen-core/src/realm/: mod.rs  tests.rs
crates/veen-core/src/revocation/: mod.rs
crates/veen-core/src/wallet/: mod.rs
crates/veen-core/src/wire/: cbor.rs  checkpoint.rs  ciphertext.rs  derivation.rs  message.rs  mmr.rs  mod.rs  payload.rs  proof.rs  receipt.rs  signing.rs  types.rs
crates/veen-hub/: Cargo.toml
crates/veen-hub/src/: config.rs  lib.rs  main.rs  observability.rs  runtime.rs  transport.rs
crates/veen-hub/src/pipeline/: mod.rs
crates/veen-hub/src/runtime/: config.rs  mod.rs
crates/veen-hub/src/server/: mod.rs
crates/veen-hub/src/storage/: attachments.rs  mod.rs  stream_index.rs
crates/veen-hub/tests/: goals.rs  goals_audit_anchor.rs  goals_dr_cutover.rs  goals_k8s_disposable_mesh.rs  proofs.rs  support.rs
crates/veen-overlays/: Cargo.toml
crates/veen-overlays/src/: lib.rs  query.rs
crates/veen-overlays/src/federation/: mod.rs
crates/veen-overlays/src/identity/: context.rs  device.rs  external.rs  group.rs  handle.rs  mod.rs  org.rs  principal.rs  scoped_org.rs
crates/veen-overlays/src/label_class/: mod.rs
crates/veen-overlays/src/meta/: mod.rs
crates/veen-overlays/src/operation/: mod.rs
crates/veen-overlays/src/pow/: mod.rs
crates/veen-overlays/src/revocation/: mod.rs
crates/veen-overlays/src/wallet/: mod.rs
crates/veen-selftest/: Cargo.toml
crates/veen-selftest/src/: http_cbor.rs  lib.rs  main.rs  metrics.rs  overlays.rs  perf.rs  process_harness.rs  query.rs  recorder.rs
crates/veen-selftest/src/suites/: common.rs
doc/: CLI-GOALS-1.txt  CLI-GOALS-2.txt  CLI-GOALS-3.md  CORE-GOALS.txt  Design-Philosophy.txt  GOALS.txt  ID-spec.txt  OS-GOALS.txt  USAGE.md  Whyuse.txt  products-spec-1.txt  query-api-spec.txt  reference.md  spec-1.txt  spec-2.txt  spec-3.txt  spec-4.txt  spec-5.txt  spec.md  spec.txt  wallet-spec.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
