[workspace]
members = [
    "crates/veen-core",
    "crates/veen-hub",
    "crates/veen-cli",
    "crates/veen-selftest",
    "crates/veen-bridge",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["VEEN Contributors <dev@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://example.com/veen"
rust-version = "1.74"

[workspace.metadata]
description = "Modern Rust workspace for the VEEN reference implementation."

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"

[workspace.dependencies]
anyhow = "1"
ciborium = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
serde_bytes = "0.11"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "process", "io-util"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream"] }
serde_json = "1"
serde_yaml = "0.9"
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
toml = "0.8"
axum = { version = "0.7", features = ["macros", "json"] }
hyper = { version = "0.14", features = ["full"] }
base64 = "0.21"
tempfile = "3"
assert_cmd = "2"
serde_path_to_error = "0.1"
dashmap = "5"
humantime-serde = "1"
humantime = "2"
k8s-openapi = { version = "0.21", features = ["v1_29"] }
kube = { version = "0.88", default-features = false, features = ["client", "rustls-tls"] }
tokio-stream = "0.1"
hdrhistogram = "7"
