[package]
name = "veen-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line client scaffold for the VEEN reference implementation."

[[bin]]
name = "veen"
path = "src/main.rs"

[features]
default = ["hub", "selftest", "kube"]
hub = ["dep:veen-hub", "dep:veen-selftest"]
selftest = ["dep:veen-selftest"]
kube = ["dep:kube", "dep:k8s-openapi"]

[dependencies]
anyhow.workspace = true
ciborium.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde_bytes.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
tracing.workspace = true
tracing-subscriber.workspace = true
veen-core = { path = "../veen-core" }
veen-overlays = { path = "../veen-overlays" }
veen-hub = { path = "../veen-hub", optional = true }
veen-selftest = { path = "../veen-selftest", optional = true }
x25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
humantime-serde.workspace = true
humantime.workspace = true
k8s-openapi = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
tempfile.workspace = true

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
assert_cmd.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
