[package]
name = "veen-hub"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hub runtime scaffold for the VEEN reference implementation."

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
axum.workspace = true
hyper.workspace = true
base64.workspace = true
serde_path_to_error.workspace = true
dashmap.workspace = true
humantime-serde.workspace = true
ciborium.workspace = true
humantime.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
veen-core = { path = "../veen-core" }
serde_bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
reqwest.workspace = true
