[package]
name = "veen-selftest"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-test harness scaffold for the VEEN reference implementation."

[lib]
name = "veen_selftest"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
ciborium.workspace = true
clap.workspace = true
serde.workspace = true
serde_bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
veen-core = { path = "../veen-core" }
veen-overlays = { path = "../veen-overlays" }
ed25519-dalek.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio-util.workspace = true
veen-hub = { path = "../veen-hub" }
veen-bridge = { path = "../veen-bridge" }
sha2.workspace = true
hex.workspace = true
hdrhistogram.workspace = true
nix.workspace = true
